changed to a more readable font, fixed when a user registers an account with a username already existing in the database, and fixed the server-side email validation

--- a/application/public/css/form.css
+++ b/application/public/css/form.css
@@ -442,7 +442,7 @@ div[id^=message-] {
 
 #post-title {
     margin: 10px auto auto auto;
-    font-family: "Segoe Script", serif;
+    font-family: "Kalam", serif;
     color: #214b78;
     width: 60%;
 }
